# image_processing

./: CMakeLists.txt  Readme.md
src/: image_adjustments.cpp  image_adjustments.h  image_proccesing.cpp  image_proccesing.h  image_proccesing.ui  main.cpp
